--- a/src/styles/-Chinaphone.scss
+++ b/src/styles/-Chinaphone.scss
@@ -253,7 +253,7 @@
   display: block;
   background:#fff;
   margin-bottom:15px;
-  padding:35px 30px;
+  padding:35px 35px 10px 35px;
   border-radius:8px;
   overflow: hidden;
   .card-header{
@@ -288,20 +288,58 @@
     }
   }
   .ChinaphoneNumItem{
-    clear: both;
-    padding-top:10px;
-    dl{
+    margin: 0 -35px;
+    .item-number{
       float: left;
-      width:244px;
-      border-radius:8px;
-      border:1px solid #c7cbd5;
-      padding:30px 20px;
-      margin-left:30px;
-      background:#fff;
-      box-shadow:0px 9px 15px rgba(72,118,164,0.13);
-      margin-top:15px;
-      &:first-child{
-        margin-left:0px;
+      width:25%;
+      padding: 25px 35px;
+      &.flat{
+        dl{
+          dt{
+            .flat-icon{
+              width: 16px;
+              height: 3px;
+              margin-left: 6px;
+              background: #fcc354;
+              display: inline-block;
+              vertical-align: 4px;
+            }
+          }
+          dd{
+            color: #fcc354;
+          }
+        }
+      }
+      &.rise{
+        dl{
+          dt{
+            .svg-i{
+              color: #fc5457;
+            }
+          }
+          dd{
+            color: #fc5457;
+          }
+        }
+      }
+      &.down{
+        dl{
+          dt{
+            .svg-i{
+              color: #29cc29;
+            }
+          }
+          dd{
+            color: #29cc29;
+          }
+        }
+      }
+      dl{
+        border-radius:8px;
+        border:1px solid #c7cbd5;
+        padding:10px 20px 30px 20px;
+        background:#fff;
+        box-shadow:0px 9px 15px rgba(72,118,164,0.13);
       }
       dt,dd{
         clear: both;
@@ -311,8 +349,19 @@
       }
       dt{
         font-size: 16px;
-        line-height: 1;
-        padding-bottom:15px;
+        line-height: 48px;
+        height: 48px;
+        .svg-i{
+          width: 28px;
+          height: 28px;
+          font-size: 24px;
+          margin-left: 6px;
+          vertical-align: middle;
+          display: inline-block;
+          .svg-icon{
+            vertical-align: top;
+          }
+        }
       }
       dd{
         font-size: 46px;
@@ -341,6 +390,10 @@
       .el-select{
         float: left;
         margin-right:10px;
+        width: 120px;
+      }
+      .date-range{
+        width: 240px;
       }
       .el-range-editor.el-input__inner{
         float: left;
