--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1381,6 +1381,20 @@
     border: 1px solid #ff9c9c;
   }
 }
+/** 滚动条样式 **/
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: #e0e0e0;
+}
+
+::-webkit-scrollbar-track {
+  border-radius: 4px;
+  background-color: transparent;
+}
 @media (max-width:1600px){
   .article-info{
     .ArticleSixFlTop{
