--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,6 +25,7 @@
 @import '-Enphone.scss';
 @import '-Sale.scss';
 @import '-webMsg.scss';
+@import '-works.scss';
 .clear{
   clear:both;
   display:block;  
