--- a/src/styles/-Enphone.scss
+++ b/src/styles/-Enphone.scss
@@ -741,6 +741,20 @@
   }
 }
 .mobile{
+  .EnphoneCard{
+    .tips-list{
+      padding: 10px 10px 3px 10px;
+      margin-top: 15px;
+      .item-tips{
+        clear: both;
+        display: block;
+        float: none;
+        width: 100%;
+        margin-left: 0%;
+        padding: 8px 10px;
+      }
+    }
+  }
   .card-header.EnphoneCardHeader{
     .clues-info.flex-wrap{
       display: block;
