--- a/src/styles/-Sale.scss
+++ b/src/styles/-Sale.scss
@@ -182,6 +182,20 @@
      }
 }
 .mobile{  
+  .SaleCardFr{
+    .tips-list{
+      padding: 10px 10px 3px 10px;
+      margin-top: 15px;
+      .item-tips{
+        clear: both;
+        display: block;
+        float: none;
+        width: 100%;
+        margin-left: 0%;
+        padding: 8px 10px;
+      }
+    }
+  }
   .box-card.SaleCardFlFrTable{
     .el-card__header{
         .clues-info{
@@ -246,9 +260,6 @@
        text-decoration: underline;
      }
    }
-}
-.box-card.SaleCardFlFrDatastatistic{
-
 }
 .SaleMassDistribution{
   display: inline-block;
@@ -582,7 +593,6 @@
     padding:20px 0px 20px 0px;
   }
 }
-
 .sales-phonecount{
   .search-wrap{
     .item-search{
