--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -27,6 +27,8 @@
 @import '-webMsg.scss';
 @import '-Compart.scss';
 @import '-works.scss';
+@import '-workOrder.scss';
+@import '-dict.scss';
 .clear{
   clear:both;
   display:block;  
@@ -1192,13 +1194,6 @@
         }
     }
 }
-/*禁止复制*/
-.forbid{
-  -webkit-user-select:none;
-  -moz-user-select:none;
-  -o-user-select:none;
-  user-select:none;
-}
 /** 穿梭框弹窗统一样式二 穿梭两次 **/
 .transfer-2-dialog{
   .transfer-panel{
@@ -1399,10 +1394,74 @@
   border-radius: 4px;
   background-color: #e0e0e0;
 }
-
 ::-webkit-scrollbar-track {
   border-radius: 4px;
   background-color: transparent;
+}
+/** 表格表头绝对定位样式 **/ 
+.fixed-table{
+  .table-mask{
+    position: fixed;
+    top: 60px;
+    background-color: #f6f7fa;
+    height:30px;
+    z-index: 8;
+  }
+  .el-table__header-wrapper,.el-table__fixed-header-wrapper{
+    position: fixed;
+  }
+  .el-table__header-wrapper{
+    z-index: 10;
+    top: 75px;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    &:before,&:after{
+      content:'';
+      display: block;
+      position: absolute;
+      top: 15px;
+    }
+  }
+  .el-table__fixed-header-wrapper{
+    z-index: 11;
+    overflow: hidden;
+    right:auto!important;
+    top: 75px;
+    box-shadow: -5px 0 5px -2px rgba(0, 0 ,0, .12);
+    border-top-right-radius: 8px;
+    .el-table__header{
+      float:right;
+    }
+  }
+  .el-table__body-wrapper.is-scrolling-right ~ .el-table__fixed-right{
+    .el-table__fixed-header-wrapper{
+      box-shadow: none;
+    }
+  }
+}
+/** 自定义滚动条 **/
+.out_box {
+  height: 8px;
+  background:none;
+  z-index: 9;
+  border-radius: 8px;
+  overflow: hidden;
+  will-change:scroll-position;
+  &.fixed{position: fixed;}
+  .in_box {
+    position: absolute;
+    z-index: 9;
+    top:0px;
+    height: 8px;
+    background: #bebdbd;
+    cursor: pointer;
+    border-radius: 8px;
+    overflow: hidden;
+    opacity: 0.6;
+    &:hover{
+      opacity: 0.4;
+    }
+  }
 }
 @media (max-width:1600px){
   .article-info{
