--- a/src/styles/-login.scss
+++ b/src/styles/-login.scss
@@ -3,6 +3,7 @@
     height:100%;
     overflow: hidden;
     position: relative;
+    background:#fff;
     .add-edit-dialog{
         .el-form{
             padding-right: 20px;
@@ -19,92 +20,210 @@
         }
     }
 }
-.login-form{
-    position: absolute;
-    width:280px;
-    text-align:center;
-    left:50%;
-    top:50%;
-    margin-left:-140px;
-    transform: translateY(-50%);
-    >p{
+.loginFl{
+    float: left;
+    display: block;
+    width: 19.0104%;
+    max-width: 365px;
+    .loginFlPic{
         width: 100%;
-        height: 20px;
-        text-align: right;
-        color: #fff;
-        margin: -12px 0 0;
-        span{
-            font-size: 14px;
-            line-height: 20px;
-            cursor: pointer;
-            opacity: .7;
-            transition: all .3s;
-            &:hover{
-                opacity: 1;
+        height: 100%;
+        background-color: #020616;
+        background-image: url('../assets/images/login_bgTwo.png');
+        background-size: cover;
+        background-position: center center;
+        background-repeat: no-repeat;
+    }
+}
+.loginFr{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    .loginFrTop{  
+        padding:25px 30px 0px 30px;      
+        .logo{
+            float: left;
+            text-align:left;
+            line-height: 0;
+            font-size:0;
+            .logo-img{
+                display: inline-block;
+                height:32px;
+                vertical-align: middle;
+                margin-right: 15px;
+            }
+            .logo-title{
+                display: inline-block;
+                height:22px;
+                vertical-align: middle;
+            }
+        }
+        .loginFrTopTxt{
+            float: right;
+            span{
+                float: left;
+                font-size: 13px;
+                color:$placeholderText;
+                margin-left: 20px;
+                line-height:32px;
+                cursor: pointer;
+                &:hover{
+                    color:$pink;
+                }
             }
         }
     }
-    .logo{
-        width:100%;
-        text-align: center;
-        line-height: 0;
-        font-size:0;
-        margin-bottom:20px;
-        .logo-img{
-            display: inline-block;
-            height:32px;
-            vertical-align: middle;
-            margin-right: 15px;
-        }
-        .logo-title{
-            display: inline-block;
-            height:22px;
-            vertical-align: middle;
+    .loginFrMid{
+        display: flex;
+        display: -webkit-flex;
+        align-items: center;
+        justify-content: center;
+        flex: 1;
+        padding-bottom:90px;
+        .loginFrMidMain{
+            clear: both;
+            display: block;
+            width: 460px;
+            padding:0px;
+            box-shadow:0px 0px 35px rgba(104,126,144,0.1);
+            h2{
+                clear: both;
+                display: block;
+                padding:60px 50px 40px 50px;
+                color:#2b2b2b;
+                font-size: 28px;
+                line-height:35px;
+                text-align: left;
+            }
+            .login-form{
+                position: relative;
+                text-align: left;
+                padding:0px 50px 70px 50px;
+                .secret{
+                    clear: both;
+                    display: block;
+                    color:#4f4f4f;
+                    font-size:14px;
+                    line-height:24px;
+                    text-align: left;
+                    padding-bottom:50px;
+                    padding-left:5px;
+                    i{
+                        display: inline-block;
+                        color:#ff840b;
+                        margin-right:10px;
+                    }
+                }
+                .forget{
+                    width: 100%;
+                    height: 20px;
+                    text-align:left;                 
+                    margin: -12px 0 0;
+                    span{
+                        font-size: 13px;
+                        line-height: 20px;
+                        cursor: pointer;
+                        transition: all .3s;
+                        color: #2e88ff;   
+                        &:hover{
+                            color:$pink;
+                        }
+                    }
+                }
+                .el-input{
+                    input.el-input__inner{
+                        border: 0px;
+                        width: 100%;
+                        height:60px;
+                        line-height: 60px;
+                        background: #f9f9f9;
+                        font-size: 15px;
+                        color: #858587;
+                        transition: all 0.2s;
+                        border-radius: 4px;
+                    }
+                    input:-moz-placeholder{color:#858587}
+                    input:-ms-input-placeholder{color:#858587}
+                    input::-webkit-input-placeholder{color:#858587}
+                    input:focus{
+                        outline:0;
+                        box-shadow:0 2px 3px 0 rgba(0,0,0,.1) inset
+                    }
+                }
+                button.el-button{
+                    cursor: pointer;
+                    width: 100%;
+                    height: 60px;
+                    padding: 0;
+                    color: #fff;
+                    transition: all 0.2s;
+                    background: #2e88ff;
+                    border: 0px;
+                    border-radius: 4px;
+                    line-height: 60px;
+                    font-size: 17px;
+                }
+                button.el-button:hover{
+                    box-shadow:0 15px 30px 0 rgba(255,255,255,.15) inset,0 2px 7px 0 rgba(0,0,0,.2)
+                }
+                button.el-button:active{
+                    box-shadow:0 5px 8px 0 rgba(0,0,0,.1) inset,0 1px 4px 0 rgba(0,0,0,.1);
+                    border:0;
+                }
+            }
+            &>p{
+                clear: both;
+                display: block;
+                border-top:1px solid #ebebeb;
+                font-size:15px;
+                color:#b1b1b1;
+                text-align: center;
+                line-height:30px;
+                padding:20px 15px;
+            }
         }
     }
-    .el-input{
-        input.el-input__inner{
-            width:100%;
-            height:50px;
-            line-height:50px;
-            background:#2d2d2d;
-            background:rgba(45,45,45,.15);
-            border-radius:6px;
-            border:1px solid #3d3d3d;
-            border:1px solid rgba(255,255,255,.15);
-            box-shadow:0 2px 3px 0 rgba(0,0,0,.1) inset;
+    .loginFrFoot{
+        position:absolute;
+        left:0px;
+        bottom:0px;
+        right:0px;
+        padding:25px 30px 20px 30px;
+        background:#f4f4f4;
+        strong{
+            clear: both;
+            display: block;
+            color:#3d3d3d;
             font-size:14px;
-            color:#fff;
-            text-shadow:0 1px 2px rgba(0,0,0,.1);
-            transition:all .2s;
+            line-height:1;
+            padding-bottom:5px;
         }
-        input:-moz-placeholder{color:#fff}
-        input:-ms-input-placeholder{color:#fff}
-        input::-webkit-input-placeholder{color:#fff}
-        input:focus{
-            outline:0;
-            box-shadow:0 2px 3px 0 rgba(0,0,0,.1) inset,0 2px 7px 0 rgba(0,0,0,.2)
+        p{
+            clear: both;
+            display: block;
+            color:#505050;
+            font-size:12px;
+            line-height:24px;
         }
-    }
-    button.el-button{
-        cursor:pointer;
-        width:100%;
-        height:48px;
-        padding:0;
-        border-radius:6px;
-        border:0;
-        box-shadow:0 15px 30px 0 rgba(255,255,255,.25) inset,0 2px 7px 0 rgba(0,0,0,.2);
-        font-size:14px;
-        font-weight:700;
-        color:#fff;
-        text-shadow:0 1px 2px rgba(0,0,0,.1);
-        transition:all .2s;
-    }
-    button.el-button:hover{
-        box-shadow:0 15px 30px 0 rgba(255,255,255,.15) inset,0 2px 7px 0 rgba(0,0,0,.2)
-    }
-    button.el-button:active{
-        box-shadow:0 5px 8px 0 rgba(0,0,0,.1) inset,0 1px 4px 0 rgba(0,0,0,.1);
-        border:0;
+        span{
+            position: absolute;
+            color:#555555;
+            border:1px solid #555555;
+            width:96px;
+            height:34px;
+            line-height:32px;
+            text-align: center;
+            font-size:13px;
+            line-height:32px;
+            right: 30px;
+            top:50%;
+            margin-top:-17px;
+            cursor: pointer;
+            border-radius: 4px;
+            &:hover{
+                border-color:$pink;
+                color:$pink;
+            }
+        }
     }
 }
