--- a/src/styles/-Enphone.scss
+++ b/src/styles/-Enphone.scss
@@ -420,78 +420,99 @@
           }
         }
         &.specifications{
+          margin: 0 -5px;
           dl{
-            float: left;
-            width:47.5%;
-            margin-left:5%;
-            padding-bottom:5px;
-            &:first-child{
-              width: 652px;
-              margin-left:0;
-              dt{
-                padding-bottom: 10px;            
-                height: auto;
-              }
+            margin: 5px;
+            dd{
+              margin-top: 5px;
             }
-            &:first-child+dl{
-              width:400px;
-              dd{
-                padding-bottom: 10px;
-                &:last-child{
-                  padding-bottom: 0px;
-                }
-              }
+            dd+dd{
+              margin-top: 10px;
             }
             .spectextarea{
               .el-textarea__inner{
                 padding: 10px 15px;
                 line-height: 24px;
+                height:158px;
               }
-            }
-            .prompt{
-              span{font-size:14px;line-height:32px;display: inline-block; padding-right:5px;}
-            }
-            .remind{
-              padding-bottom:5px;
             }
             .upload{
               .el-upload{
                 float: left;
+                margin-bottom: 10px;
               }
               .el-upload__tip{
                 float: left;
-                padding-left: 30px;
+                margin-bottom: 10px;
+                margin-left: 10px;
+                margin-top:0;
+                width: 410px;
+                border-radius: 4px;
+                height: 32px;
+                line-height: 32px;
+                clear:right;
               }
               .el-upload-list{
-                float: right;
+                width: 100%;
+                clear:both;
+                border: 1px solid #dcdfe6;
+                border-radius: 4px;
+                height: 32px;
                 .el-upload-list__item{
-                  line-height:32px;
+                  line-height:30px;
+                  margin-top:0;
                   .el-icon-close{
                     top: 9px;
-                  }
-                  &:first-child{
-                    margin-top:0px;
-                  }                  
+                  }                
                 }
               }
             }
           }
         }
         &.IntentionEquipment{
-          width:1050px;
           dl{
+            dt{
+              font-weight: bold;
+              padding:10px 0;
+              height: 44px;
+              position: relative;
+              &:before,&:after{
+                content:'';
+                display: block;
+                bottom: 5px;
+                position: absolute;
+                left:0;
+              }
+              &:before{
+                width: 100%;
+                border-bottom: 2px dashed #edf0f4;
+              }
+              &:after{
+                width: 56px;
+                border-bottom: 2px solid $menuActiveText;
+              }
+            }
             dd{
               strong{
                 clear: both;
                 display: block;
-                font-weight:normal;
                 font-size:14px;
                 text-align: left;
-                padding-bottom:10px;
+                height: 24px;
+                line-height: 24px;
+                margin-top: 15px;
               }
               .clues-list{
-                padding-bottom:20px;
-                .el-checkbox{margin-bottom:5px;}
+                margin: 0 -5px;
+                .item-checkbox{
+                  margin: 5px;
+                }
+              }
+              p{
+                line-height: 32px;
+                font-size: 12px;
+                color: #fa4d4d;
+                margin-top: 10px;
               }
             }
           }
@@ -501,31 +522,36 @@
             padding-top: 10px;
             dd{
               .clues-list{
-                margin: 0 -5px;
+                margin: 10px -5px 0;
                 .item-clues{
                   float:left;
+                  width:160px;
                   position: relative;
-                  font-size: 14px;
-                  color:$menuBg;
+                  font-size: 12px;
+                  color: #606266;
                   cursor: pointer;
-                  padding-left: 20px;
-                  line-height: 20px;
-                  padding: 2px 15px 2px 20px;
+                  line-height:20px;
                   margin: 5px;
+                  border:1px solid #DCDFE6;
+                  border-radius:4px;
+                  padding:5px 10px 5px 10px;
                   i{
-                    position: absolute;
-                    left:0px;
-                    top:50%;
-                    margin-top: -7px;        
+                    float:left;      
                     width: 14px;
                     height: 14px;
                     box-sizing: border-box;
-                    border-radius:2px;
                     border:1px solid #dcdfe6;
+                    border-radius: 2px;
                     background:#fff;
+                    border:1px solid #DCDFE6;
+                    background:#fff;
+                    margin-top:3px;
+                    margin-right:6px;
+                    position: relative;
                   }
-                  &:hover,&.active{
+                  &.active{
                     color:$menuActiveText;
+                    border-color:$menuActiveText;
                     i{
                       border-color:$menuActiveText;
                       background:$menuActiveText;
@@ -539,7 +565,7 @@
                         height: 7px;
                         left: 4px;
                         position: absolute;
-                        top: 0px;
+                        top: 1px;
                         width: 3px;
                         transition: transform 0.15s ease-in 0.05s;
                         transform-origin: center;
