--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -584,29 +584,18 @@
   margin: 0 -5px;
   &.small{
     .item-clues{
-      font-size: 12px;
       padding:3px 15px 3px 10px;
-      i{
-        width: 12px;
-        height: 12px;
-        margin-top: 4px;
-      }
-      &.active{
-        i{
-          border: 4px solid $menuActiveText;
-        }
-      }
     }
   }
   .item-clues{
     float:left;
     position:relative;
-    font-size:14px;
-    color:#20222A;
+    font-size:12px;
+    color:#606266;
     cursor:pointer;
     line-height:20px;
     margin: 5px;
-    border:1px solid #e6ebf5;
+    border:1px solid #DCDFE6;
     border-radius:4px;
     padding:5px 15px 5px 10px;
     text-overflow:ellipsis;
@@ -615,45 +604,37 @@
     i{
       position:relative;
       float:left;
-      width:14px;
-      height:14px;
+      width:12px;
+      height:12px;
       box-sizing:border-box;
       border-radius:50%;
-      border:1px solid #dcdfe6;
+      border:1px solid #DCDFE6;
       background:#fff;
-      margin-top:3px;
+      margin-top:4px;
       margin-right:8px;
-    }
-    &:hover{
-      color:$menuActiveText;
-      border-color:#bfdbff;
     }
     &.active{
       color:$menuActiveText;
-      border-color:#bfdbff;
-      background:#edf5ff;
+      border-color: $menuActiveText;
       i{
-        border-color:$menuActiveText;
-        border:5px solid $menuActiveText;
+        border:4px solid $menuActiveText;
       }
     }
   }
 }
 /*控件多选模仿单选*/
-.radioTomulti{
+.checkbox-custom{
   .el-checkbox{
     float:left;
     position:relative;
-    font-size:14px;
-    color:#20222A;
+    font-size:12px;
+    color:#606266;
     cursor:pointer;
-    padding-left:20px;
-    line-height:24px;
-    margin-right:10px;
-    margin-bottom:10px;
-    border:1px solid #e6ebf5;
+    line-height:20px;
+    margin: 5px;
+    border:1px solid #DCDFE6;
     border-radius:4px;
-    padding:5px 8px;
+    padding:5px 15px 5px 10px;
     text-overflow:ellipsis;
     white-space:nowrap;
     overflow:hidden;
@@ -681,17 +662,10 @@
     .el-checkbox__label{
       padding-left:0px;
     }
-    &.is-checked,&:hover{
+    &.is-checked{
       border-color:#bfdbff;
-      background:#edf5ff;
       .el-checkbox__input{
         border-color:#2e88ff;
-        .el-checkbox__inner{
-          background-color:#fff;
-          &:after{
-            background:#2e88ff;
-          }
-        }
       }
       .el-checkbox__label{
         color:#2e88ff;
