--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,7 +9,7 @@
 @import './-resize.scss';
 @import './-public.scss';
 @import './-layout.scss';
-@import './ArticleIndex.scss';
+@import './-ArticleIndex.scss';
 @import './-WebsiteList.scss';
 @import './-WebserverList.scss';
 @import './-logsIndex.scss';
@@ -22,13 +22,13 @@
 @import './-Article.scss';
 @import './-home.scss';
 @import './-Chinaphone.scss';
-@import '-Enphone.scss';
-@import '-Sale.scss';
-@import '-webMsg.scss';
-@import '-Compart.scss';
-@import '-works.scss';
-@import '-workOrder.scss';
-@import '-dict.scss';
+@import './-Enphone.scss';
+@import './-Sale.scss';
+@import './-webMsg.scss';
+@import './-Compart.scss';
+@import './-works.scss';
+@import './-workOrder.scss';
+@import './-dict.scss';
 .clear{
   clear:both;
   display:block;  
@@ -199,14 +199,14 @@
 /** 职称图片标识样式 **/
 .JobLevel_1, .JobLevel_2, .JobLevel_3, .JobLevel_4, .JobLevel_5, .JobLevel_6, .JobLevel_7, .JobLevel_8 { position:relative; display:block; width:90px; margin:10px auto; height:24px; font-size:0;overflow:initial; }
 .JobLevel_1:before, .JobLevel_2:before, .JobLevel_3:before, .JobLevel_4:before, .JobLevel_5:before, .JobLevel_6:before, .JobLevel_7:before, .JobLevel_8:before { content:''; position:absolute; display:block; left:-11px; top:-10px; bottom:-10px; right:-11px; background-position:center; background-repeat:no-repeat; -webkit-background-size:100% auto; background-size:100% auto; }
-.JobLevel_6:before { background-image:url(../../public/level_1_bg.png); }
-.JobLevel_5:before { background-image:url(../../public/level_2_bg.png); }
-.JobLevel_4:before { background-image:url(../../public/level_3_bg.png); }
-.JobLevel_3:before { background-image:url(../../public/level_4_bg.png); }
-.JobLevel_9:before { background-image:url(../../public/level_5_bg.png); }
-.JobLevel_2:before { background-image:url(../../public/level_6_bg.png); }
-.JobLevel_8:before { background-image:url(../../public/level_7_bg.png); }
-.JobLevel_1:before { background-image:url(../../public/level_8_bg.png); }
+.JobLevel_6:before { background-image:url(../assets/level_1_bg.png); }
+.JobLevel_5:before { background-image:url(../assets/level_2_bg.png); }
+.JobLevel_4:before { background-image:url(../assets/level_3_bg.png); }
+.JobLevel_3:before { background-image:url(../assets/level_4_bg.png); }
+.JobLevel_9:before { background-image:url(../assets/level_5_bg.png); }
+.JobLevel_2:before { background-image:url(../assets/level_6_bg.png); }
+.JobLevel_8:before { background-image:url(../assets/level_7_bg.png); }
+.JobLevel_1:before { background-image:url(../assets/level_8_bg.png); }
 
 /** 移动端搜索弹窗统一样式 **/
 .search-dialog{
