--- a/src/styles/-login.scss
+++ b/src/styles/-login.scss
@@ -29,7 +29,7 @@
         width: 100%;
         height: 100%;
         background-color: #020616;
-        background-image: url('../assets/images/login_bgTwo.png');
+        background-image: url('../assets/images/login_bg.jpg');
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
