--- a/src/styles/-Sale.scss
+++ b/src/styles/-Sale.scss
@@ -120,7 +120,9 @@
             i{
               font-size: 13px;
               font-weight: bold;
-              width: 16px;
+              padding-left:3px;
+              padding-right:3px;
+              min-width: 22px;
               height:16px;
               text-align: center;
               line-height: 16px;
