--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1372,7 +1372,8 @@
   border-radius: 4px;
   background-color: transparent;
 }
-/** 表格表头绝对定位样式 **/ 
+/** 表格表头绝对定位样式 **/
+.el-table__fixed-right{background:#fff!important;}
 .fixed-table{
   .table-mask{
     position: fixed;
@@ -1415,7 +1416,7 @@
     .el-table__header{
       float:left;
     }
-  }
+  }  
   .el-table__fixed-right .el-table__fixed-header-wrapper{
     box-shadow:-5px 0 5px -2px rgba(0, 0 ,0, .12);
     border-top-right-radius: 8px;
